Fix about spacing

--- a/src/components/Menu/c-menu.scss
+++ b/src/components/Menu/c-menu.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	min-height: -webkit-fill-available;
+	min-height: 100vh;
 	width: 100vw;
 	display: block;
 	z-index: 99999;
