--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -8,7 +8,7 @@
 
 	.o-h1 {
 			
-		width: 40vw;
+		width: 100%;
 
 		&, .c-line {
 			text-align: left !important;
@@ -516,8 +516,8 @@
 
 		.title,
 		.title p {
-			font-size: 13vw;
-			line-height: 13vw;
+			font-size: 19vw;
+			line-height: 19vw;
 		}
 
 		&_sheet {
@@ -534,8 +534,8 @@
 			margin: 0;
 
 			p {
-				font-size: 8vw;
-				line-height: 8vw;
+				font-size: 9vw;
+				line-height: 9vw;
 			}
 		}
 
